# THEGAME

./: .gitignore  .travis.yml  BeliefFunctions.c  BeliefFunctions.h  BeliefsFromBeliefs.c  BeliefsFromBeliefs.h  BeliefsFromRandomness.c  BeliefsFromRandomness.h  BeliefsFromSensors.c  CMakeLists.txt  README.txt  ReadDirectory.h  ReadFile.h  Sets.c  Tests.c  config.h  index.html  main.c  makefile  params.json  tests.cmake
data/beliefsFromSensors/presence/motion/: Belief1.txt  Belief2.txt
data/beliefsFromSensors/tempoFusion/test/: options
data/beliefsFromSensors/tempoFusionTemoin/test/: no.txt
data/beliefsFromSensors/tempoSpecTemoin/test/: yes.txt
data/beliefsFromSensors/test5/: values
data/beliefsFromSensors/test9/: values
data/results/tempo-fusion-temoin/: useless
data/results/tempo-spec/: printResults.py
data/results/tempo-spec-temoin/: useless
doc/: Doxyfile  Doxyfile - doc options  Doxyfile.in
doc/html/: _belief_functions_8c.html  _belief_functions_8c_source.html  _belief_functions_8h.html  _belief_functions_8h_source.html  _beliefs_from_beliefs_8c.html  _beliefs_from_beliefs_8c_source.html  _beliefs_from_beliefs_8h.html  _beliefs_from_beliefs_8h_source.html  _beliefs_from_randomness_8c.html  _beliefs_from_randomness_8c_source.html  _beliefs_from_randomness_8h.html  _beliefs_from_randomness_8h_source.html  _beliefs_from_sensors_8c.html  _beliefs_from_sensors_8c_source.html  _beliefs_from_sensors_8h.html  _beliefs_from_sensors_8h_source.html  _f_a_q_page.html  _origin.html  _read_directory_8c.html  _read_directory_8c_source.html  _read_directory_8h.html  _read_directory_8h_source.html  _read_file_8c.html  _read_file_8c_source.html  _read_file_8h.html  _read_file_8h_source.html  _sets_8c.html  _sets_8c_source.html  _sets_8h.html  _sets_8h_source.html  _t_o_d_o.html  _tests_8c.html  _tests_8c_source.html  _tests_8h.html  _tests_8h_source.html  _tuto.html  _tuto_page.html  annotated.html  classes.html  config_8h.html  (+54 more)
doc/html/search/: all_62.html  all_62.js  all_63.html  all_63.js  all_64.html  all_65.html  all_6d.html  all_6d.js  all_6e.html  all_6e.js  all_6f.html  all_70.html  all_71.js  all_72.html  all_72.js  all_73.html  all_73.js  all_74.html  all_75.html  classes_62.html  classes_62.js  classes_72.html  classes_73.html  classes_73.js  classes_75.html  defines_62.html  defines_62.js  defines_63.html  defines_63.js  defines_64.js  defines_75.js  defines_76.html  defines_77.html  defines_77.js  enums_62.html  enums_62.js  enums_63.html  files_62.html  files_62.js  files_72.html  (+17 more)
doc/latex/: _belief_functions_8c.tex  _belief_functions_8h.tex  _beliefs_from_beliefs_8c.tex  _beliefs_from_beliefs_8h.tex  _beliefs_from_randomness_8c.tex  _beliefs_from_randomness_8h.tex  _beliefs_from_sensors_8c.tex  _beliefs_from_sensors_8h.tex  _f_a_q_page.tex  _origin.tex  _read_directory_8c.tex  _read_directory_8h.tex  _read_file_8c.tex  _read_file_8h.tex  _sets_8c.tex  _sets_8h.tex  _t_o_d_o.tex  _tests_8c.tex  _tests_8h.tex  _tuto.tex  _tuto_page.tex  annotated.tex  config_8h.tex  dir_5eb159725f84c66aafd839904a4acdd0.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_7420a7c8f71871d771403938d4d24c4a.tex  dir_df3bee86fdbfb464c3a94507855b0bdc.tex  doxygen.sty  files.tex  index.tex  origin_page.tex  refman.aux  refman.idx  refman.out  refman.tex  struct_b_f___belief_function.tex  struct_b_f___belief_point.tex  struct_b_f___focal_element.tex  struct_b_f_b___belief_from_belief.tex  struct_b_f_b___belief_structure.tex  (+22 more)
src/main/c/: BeliefCombinations.c  BeliefDecisions.c  BeliefFunctions.c  BeliefsFromBeliefs.c  BeliefsFromRandomness.c  BeliefsFromSensors.c  ReadDirectory.c  ReadFile.c  Sets.c
src/main/c/core/: BeliefCombinations.c  BeliefFunctions.c  BeliefsFromRandomness.c  Sets.c  (+1 more)
src/main/include/: BeliefCombinations.h  BeliefFunctions.h  BeliefsFromRandomness.h  BeliefsFromSensors.h  Sets.h
src/test/c/: Tests.c  checkBeliefCombination.c  checkBeliefFromSensors.c  checkBeliefFunctions.c  checkSets.c  main.c  test_BeliefCombination.c  test_BeliefFromSensors.c  test_BeliefFromSensorsCreation.c  test_BeliefFunctions.c  test_Sets.c  test_XmlBeliefFromSensors.c
src/test/include/: Tests.h  unit_tests.h
(+45 files in other folders)
